--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                     <div class="value">0</div>
                     <div class="new-value">+0</div>
                 </div>
+                <div class="active">
+                    <div class="title">Total Active</div>
+                    <div class="value">0</div>
+                    <div class="new-value">+0</div>
+                </div>
                 <div class="recovered">
                     <div class="title">Total Recovered</div>
                     <div class="value">0</div>
@@ -48,6 +53,14 @@
                     <div class="title">Total Deaths</div>
                     <div class="value">0</div>
                     <div class="new-value">+0</div>
+                </div>
+                <div class="recovery">
+                    <div class="title">Recovery Rate</div>
+                    <div class="value">0%</div>
+                </div>
+                <div class="fatality ">
+                    <div class="title">Fatality  Rate</div>
+                    <div class="value">0%</div>
                 </div>
             </div>
         </div>
