--- a/index.html
+++ b/index.html
@@ -34,33 +34,35 @@
                         </div>
                     </div>
                 </div>
-                <div class="total-cases">
-                    <div class="title">Total Cases</div>
-                    <div class="value">0</div>
-                    <div class="new-value">+0</div>
-                </div>
-                <div class="active">
-                    <div class="title">Total Active</div>
-                    <div class="value">0</div>
-                    <div class="new-value">+0</div>
-                </div>
-                <div class="recovered">
-                    <div class="title">Total Recovered</div>
-                    <div class="value">0</div>
-                    <div class="new-value">+0</div>
-                </div>
-                <div class="deaths">
-                    <div class="title">Total Deaths</div>
-                    <div class="value">0</div>
-                    <div class="new-value">+0</div>
-                </div>
-                <div class="recovery">
-                    <div class="title">Recovery Rate</div>
-                    <div class="value">0%</div>
-                </div>
-                <div class="fatality ">
-                    <div class="title">Fatality  Rate</div>
-                    <div class="value">0%</div>
+                <div class="data">
+                    <div class="total-cases">
+                        <div class="title">Total Cases</div>
+                        <div class="value">0</div>
+                        <div class="new-value">+0</div>
+                    </div>
+                    <div class="active">
+                        <div class="title">Total Active</div>
+                        <div class="value">0</div>
+                        <div class="new-value">+0</div>
+                    </div>
+                    <div class="recovered">
+                        <div class="title">Total Recovered</div>
+                        <div class="value">0</div>
+                        <div class="new-value">+0</div>
+                    </div>
+                    <div class="deaths">
+                        <div class="title">Total Deaths</div>
+                        <div class="value">0</div>
+                        <div class="new-value">+0</div>
+                    </div>
+                    <div class="recovery">
+                        <div class="title">Recovery Rate</div>
+                        <div class="value">0%</div>
+                    </div>
+                    <div class="fatality ">
+                        <div class="title">Fatality  Rate</div>
+                        <div class="value">0%</div>
+                    </div>
                 </div>
             </div>
         </div>
