minor bug fixes

--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
     <footer>
         <div class="footer-container">
             <div class="copyright">
-                <p>Copyright 2020 Nikhil Ghate</p>
+                <p>Created with ❤️ by Nikhil Ghate</p>
             </div>
         </div>
     </footer>
     
-    <script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
     <script src="js/countries.js"></script>
     <script src="js/app.js"></script>
 </body>
