--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>COVID-19 STATS</title>
+    <title>COVID-19 LIVE STATS TRACKER</title>
 </head>
 <body>
     <header>
@@ -43,6 +43,7 @@
                     <div class="active">
                         <div class="title">Total Active</div>
                         <div class="value">0</div>
+                        <div class="percentage">0%</div>
                     </div>
                     <div class="recovered">
                         <div class="title">Total Recovered</div>
