--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <div class="logo">
             <img src="./img/logo.png" alt="">
-            <p>Covid-19<br/>Stats</p>
+            <p>Covid-19<br/>Tracker</p>
         </div>
         <nav>
             <ul>
@@ -27,7 +27,7 @@
                     <div class="change-country">change</div>
                     <div class="search-country hide">
                         <div class="search-box">
-                            <input type="text" id="search-input" placeholder="Search Country...">
+                            <input type="text" id="search-input" autocomplete="off" placeholder="Search Country...">
                             <img src="./img/close.svg" alt="" class="close">
                         </div>
                         <div class="country-list">
@@ -38,30 +38,30 @@
                     <div class="total-cases">
                         <div class="title">Total Cases</div>
                         <div class="value">0</div>
-                        <div class="new-value">+0</div>
+                        <div class="new-value">(▲0)</div>
                     </div>
                     <div class="active">
                         <div class="title">Total Active</div>
                         <div class="value">0</div>
-                        <div class="percentage">0%</div>
+                        <div class="percentage">(0%)</div>
                     </div>
                     <div class="recovered">
                         <div class="title">Total Recovered</div>
                         <div class="value">0</div>
-                        <div class="new-value">+0</div>
+                        <div class="new-value">(▲0)</div>
                     </div>
                     <div class="deaths">
                         <div class="title">Total Deaths</div>
                         <div class="value">0</div>
-                        <div class="new-value">+0</div>
+                        <div class="new-value">(▲0)</div>
                     </div>
                     <div class="recovery">
                         <div class="title">Recovery Rate</div>
-                        <div class="value">0%</div>
+                        <div class="value">(0%)</div>
                     </div>
                     <div class="fatality ">
                         <div class="title">Fatality  Rate</div>
-                        <div class="value">0%</div>
+                        <div class="value">(0%)</div>
                     </div>
                 </div>
             </div>
